test/arrays/views/localSlice/leadZip.good
leadZip.chpl:2: In function 'main':
leadZip.chpl:7: error: local slices may not lead zippered iteration
